// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractionStats renders nothing if no counter party 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You have never 
      shared your details
       with 
      this dApp
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders short address if no name is present 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You have never 
      shared your details
       with 
      0x1bc5cbf71b
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders with "2 times" if exactly 2 as stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You've 
      shared your details
       with 
      Coinbase
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(138,155,161,1.0)",
              "fontFamily": undefined,
              "fontSize": 13,
              "letterSpacing": 0.5,
              "lineHeight": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
          ]
        }
      >
         2 times 
        before
      </Text>
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders with "once" if exactly 1 as stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You've 
      shared your details
       with 
      Coinbase
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(138,155,161,1.0)",
              "fontFamily": undefined,
              "fontSize": 13,
              "letterSpacing": 0.5,
              "lineHeight": 15,
              "paddingLeft": 5,
              "paddingRight": 5,
            },
          ]
        }
      >
         once 
        before
      </Text>
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders you have never if 0 stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You have never 
      shared your details
       with 
      Coinbase
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders you have never if no stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingBottom": 0,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(138,155,161,1.0)",
          "fontFamily": undefined,
          "fontSize": 13,
          "letterSpacing": 0.5,
          "lineHeight": 15,
          "paddingLeft": 5,
          "paddingRight": 5,
        }
      }
    >
      You have never 
      shared your details
       with 
      Coinbase
    </Text>
  </View>
</View>
`;
